<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_medium"
    android:paddingLeft="@dimen/padding_small"
    android:paddingRight="@dimen/padding_small"
    
     >
     <TextView
        android:id="@+id/locker_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/locker_hint"
        android:hint="@string/title"
        android:background="#fff"
        android:textColor="@color/grey_dark"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_medium"
        android:paddingLeft="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small"
        />
    <TextView
        android:id="@+id/pin_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="@drawable/password_text_box_bg"
        android:textSize="26sp"
        android:maxLength="8"
        android:textColor="@color/grey_dark"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal" 
        style="?android:attr/buttonBarStyle" >
            <Button
        	    android:id="@+id/keypad_one"
        	    android:layout_height="match_parent"
        	    android:layout_weight="1"
        	    android:layout_width="0dp"
        	    android:textAlignment="center"
        	    android:background="#fff"
        	    android:onClick="keypadPress"
        	    android:text="@string/keypad_one"
        	    style="?android:attr/buttonBarButtonStyle"
        	    />
        	<Button 
        	    android:id="@+id/keypad_two"
        	    android:layout_height="match_parent"
        	    android:layout_weight="1"
        	    android:layout_width="0dp"
        	    android:textAlignment="center"
        	    android:background="#fff"
        	    android:onClick="keypadPress"
        	    android:text="@string/keypad_two"
        	    style="?android:attr/buttonBarButtonStyle"
        	    />
        	<Button
        	    android:id="@+id/keypad_three"
        	    android:layout_height="match_parent"
        	    android:layout_weight="1"
        	    android:layout_width="0dp"
        	    android:textAlignment="center"
        	    android:background="#fff"
        	    android:onClick="keypadPress"
        	    android:text="@string/keypad_three"
        	    style="?android:attr/buttonBarButtonStyle"
        	    />        
        
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal" 
        style="?android:attr/buttonBarStyle" >
            <Button
        	    android:id="@+id/keypad_four"
        	    android:layout_height="match_parent"
        	    android:layout_weight="1"
        	    android:layout_width="0dp"
        	    android:textAlignment="center"
        	    android:background="#fff"
        	    android:onClick="keypadPress"
        	    android:text="@string/keypad_four"
        	    style="?android:attr/buttonBarButtonStyle"
        	    />
        	<Button 
        	    android:id="@+id/keypad_five"
        	    android:layout_height="match_parent"
        	    android:layout_weight="1"
        	    android:layout_width="0dp"
        	    android:textAlignment="center"
        	    android:background="#fff"
        	    android:onClick="keypadPress"
        	    android:text="@string/keypad_five"
        	    style="?android:attr/buttonBarButtonStyle"
        	    />
        	<Button
        	    android:id="@+id/keypad_six"
        	    android:layout_height="match_parent"
        	    android:layout_weight="1"
        	    android:layout_width="0dp"
        	    android:textAlignment="center"
        	    android:background="#fff"
        	    android:onClick="keypadPress"
        	    android:text="@string/keypad_six"
        	    style="?android:attr/buttonBarButtonStyle"
        	    />        
        
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal" 
        style="?android:attr/buttonBarStyle" >
            <Button
        	    android:id="@+id/keypad_seven"
        	    android:layout_height="match_parent"
        	    android:layout_weight="1"
        	    android:layout_width="0dp"
        	    android:textAlignment="center"
        	    android:background="#fff"
        	    android:onClick="keypadPress"
        	    android:text="@string/keypad_seven"
        	    style="?android:attr/buttonBarButtonStyle"
        	    />
        	<Button 
        	    android:id="@+id/keypad_eight"
        	    android:layout_height="match_parent"
        	    android:layout_weight="1"
        	    android:layout_width="0dp"
        	    android:textAlignment="center"
        	    android:background="#fff"
        	    android:onClick="keypadPress"
        	    android:text="@string/keypad_eight"
        	    style="?android:attr/buttonBarButtonStyle"
        	    />
        	<Button
        	    android:id="@+id/keypad_nine"
        	    android:layout_height="match_parent"
        	    android:layout_weight="1"
        	    android:layout_width="0dp"
        	    android:textAlignment="center"
        	    android:background="#fff"
        	    android:onClick="keypadPress"
        	    android:text="@string/keypad_nine"
        	    style="?android:attr/buttonBarButtonStyle"
        	    />        
        
    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal" 
        android:background="#fff"
        android:padding="@dimen/padding_medium"
        style="?android:attr/buttonBarStyle" >
            <Button
        	    android:id="@+id/keypad_OK"
        	    android:layout_height="match_parent"
        	    android:layout_weight="1"
        	    android:layout_width="0dp"
        	    android:textAlignment="center"
        	    android:textColor="#fff"
        	    android:textStyle="bold"
        	    android:background="@drawable/green_button_bg"
        	    android:onClick="keypadPress"
        	    android:text="@string/keypad_ok"
        	    style="?android:attr/buttonBarButtonStyle"
        	    />
        	<Button 
        	    android:id="@+id/keypad_clear"
        	    android:layout_height="match_parent"
        	    android:layout_weight="1"
        	    android:layout_width="0dp"
        	    android:textAlignment="center"
        	    android:textColor="#fff"
        	    android:textStyle="bold"
        	    android:background="@drawable/red_button_bg"
        	    android:onClick="keypadPress"
        	    android:text="@string/keypad_clear_all"
        	    style="?android:attr/buttonBarButtonStyle"
        	    />
        	      
        
    </LinearLayout>
    

</LinearLayout>
