<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/padding_small"
    android:paddingRight="@dimen/padding_small"
    android:background="@color/title_stip_color_5"
     >
       <TextView 
            android:id="@+id/create_note_title_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:paddingTop="@dimen/padding_medium"
            android:paddingBottom="@dimen/padding_small"
            android:background="@color/title_stip_color_5"
            android:textColor="@color/grey_dark"
            />
        <EditText 
            android:id="@+id/create_note_title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/null_string"
            android:inputType="text"
            android:background="#fff"
            android:layout_below="@id/create_note_title_heading"
            />    
        <TextView 
            android:id="@+id/create_note_content_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:paddingTop="@dimen/padding_medium"
            android:paddingBottom="@dimen/padding_small"
            android:background="@color/title_stip_color_5"
            android:textColor="@color/grey_dark"
            android:layout_below="@id/create_note_title"
            />  
        <EditText 
            android:id="@+id/create_note_content"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:background="#fff"
            android:layout_below="@id/create_note_content_heading"
            android:layout_above="@+id/bottomOptiosBar"
            />
        <RelativeLayout
            android:id="@+id/bottomOptiosBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            >            
        <Button 
            android:id="@+id/bulletBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bullet"
            android:onClick="addBullet"
            />   
  		</RelativeLayout>
</RelativeLayout>
